# cloudrender

./: .gitignore  CMakeLists.txt  README.md  config.h  foo.ppm  imagebuffer.h  imaterial.h  intersection.h  lightsource.h  main.cpp  matte_material.h  ray.h  render.h  sampler.h  scene.h  triangle.h  vecmath.h  vecutil.h
source/: camera.cpp  camera.h  color.cpp  color.h  config.cpp  config.h  gtestmain.cpp  ilight.h  imagebuffer.h  imaterial.h  intersection.h  kd_tree.h  lightsource.h  logger.cpp  logger.h  main.cpp  material_collection.h  matte_material.h  obj_file.cpp  obj_file.h  pointlight.h  radiance_sample.cpp  radiance_sample.h  ray.cpp  ray.h  render.h  sampler.h  scene.cpp  scene.h  triangle.cpp  triangle.h  trilight.h  vecmath.h  vecutil.cpp  vecutil.h
